--- a/webserver/build
+++ b/webserver/build
@@ -1,2 +1,16 @@
 #! /bin/bash
-sudo docker build -t webserver .
+
+# For macOS compatibility.
+realpath() {
+    [[ $1 = /* ]] && echo "$1" || echo "$PWD/${1#./}"
+}
+
+PORT=5000
+
+RELATIVE_DIR=$(dirname "$0")
+ABSOLUTE_DIR=$(realpath "$RELATIVE_DIR")
+
+sudo docker build \
+    -f "$ABSOLUTE_DIR/Dockerfile" \
+    -t webserver \
+    .
