--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,29 @@
-events { worker_connections 1024; }
+worker_processes auto;
+events { 
+    worker_connections 4000; 
+    use epoll;
+    multi_accept on;
+}
 http {
     
-    # first we declare our upstream server, which is our Gunicorn application
-    upstream localhost {
-        server ws1:3000;
-        server ws2:3000;
-        server ws3:3000;
-    }
+    # # first we declare our upstream server, which is our Gunicorn application
+    # upstream localhost {
+    #     server ws1:3000;
+    #     server ws2:3000;
+    #     server ws3:3000;
+    # }
 
     # now we declare our main server
     server {
 
         listen 80;
         server_name localhost;
+        access_log off;
+        client_body_timeout 10;
+
 
         location / {
-            # everything is passed to Gunicorn
-            proxy_pass http://localhost;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            #proxy_redirect off;
+            return 200;
         }
     }
 }
