Update jar production and add 'run' script for simplicity

--- a/http-workload-generator/build.gradle
+++ b/http-workload-generator/build.gradle
@@ -21,7 +21,7 @@ jar {
     manifest {
         attributes (
                 'Class-Path': configurations.compile.files.collect {"$it.name"}.join(' '),
-                'Main-Class' : 'com.distributed.Entry'
+                'Main-Class' : 'org.ddjk.workload.Generator'
         )
     }
     from {
