--- a/transaction-server/Dockerfile
+++ b/transaction-server/Dockerfile
@@ -1,10 +1,14 @@
 FROM alpine:3.8
 
+ENV http_proxy=http://192.168.1.1:3128/
+ENV https_proxy=http://192.168.1.1:3128/
+
 # Install required packages.
 RUN apk --update add py3-psycopg2
-RUN pip3 install --upgrade pip
-RUN pip3 install flask
-RUN pip3 install gunicorn
+
+RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install --upgrade pip
+RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install flask
+RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install gunicorn
 
 # Configure Flask server.
 ENV FLASK_APP=/src/server.py
