--- a/workload-generator/build.gradle
+++ b/workload-generator/build.gradle
@@ -8,7 +8,9 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven {
+        url "http://repo.maven.apache.org/maven2/"
+    }
 }
 
 dependencies {
