Slim down webserver for static files

--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -5,15 +5,6 @@ events {
     multi_accept on;
 }
 http {
-    
-    # # first we declare our upstream server, which is our Gunicorn application
-    # upstream localhost {
-    #     server ws1:3000;
-    #     server ws2:3000;
-    #     server ws3:3000;
-    # }
-
-    # now we declare our main server
     server {
 
         listen 80;
@@ -23,7 +14,7 @@ http {
 
 
         location / {
-            return 200;
+            root /usr/share/nginx/html;
         }
     }
 }
