--- a/workload-generator/Dockerfile
+++ b/workload-generator/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.8
 
-ENV http_proxy=http://192.168.1.1:3128/
-ENV https_proxy=http://192.168.1.1:3128/
+#ENV http_proxy=http://192.168.1.1:3128/
+#ENV https_proxy=http://192.168.1.1:3128/
 
 RUN apk --update add openjdk8
 
