--- a/transaction-server/Dockerfile
+++ b/transaction-server/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.8
 
-#ENV http_proxy=http://192.168.1.1:3128/
-#ENV https_proxy=http://192.168.1.1:3128/
+# Grab proxy settings to allow internet access.
+ENV http_proxy=$HTTP_PROXY
+ENV https_proxy=$HTTPS_PROXY
 
 # Install required packages.
 RUN apk --update add py3-psycopg2
