Move workload-generator to 2-stage build for better caching efficiency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,8 +46,9 @@ services:
         depends_on:
             - transaction-server
         volumes:
-            - ./workload-generator/:/src:rw
             - ./workloads:/workloads:ro
+        stdin_open: true
+        tty: true
     webserver:
         image: nginx:1.14
         restart: on-failure
