--- a/workload-generator/Dockerfile
+++ b/workload-generator/Dockerfile
@@ -4,7 +4,11 @@ FROM alpine:3.8
 ENV http_proxy=$HTTP_PROXY
 ENV https_proxy=$HTTPS_PROXY
 
+# Install dependencies.
 RUN apk --update add openjdk8
 
 WORKDIR /src
-CMD ["/src/entry"]
+COPY ./src /src
+
+#-Dhttp.proxyHost=192.168.1.1 -Dhttp.proxyPort=3128 
+RUN ./gradlew build
