--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
         restart: always
         ports:
             - 4444:4444
+        expose:
+            - 6000
     transaction-server:
         build: transaction-server
         depends_on:
