Change workload-generator Dockerfile to pull in proxy host/port

--- a/workload-generator/Dockerfile
+++ b/workload-generator/Dockerfile
@@ -9,12 +9,17 @@ RUN apk --update add openjdk8 nss
 
 WORKDIR /src
 
+# Each 'RUN' instance spawns its own shell, so store output
+# of commands into files for access later.
+RUN echo $http_proxy | grep -oE [0-9.]+ | sed -n 1p > /host
+RUN echo $http_proxy | grep -oE [0-9.]+ | sed -n 2p > /port
+
 COPY ./src/gradlew /src/gradlew
 COPY ./src/gradle /src/gradle
-#COPY ./src/build.gradle /src/build.gradle
 
 # Cache gradle zip file
-RUN ./gradlew -Dhttp.proxyHost=192.168.1.1 -Dhttp.proxyPort=3128
+RUN ./gradlew -Dhttp.proxyHost=$(cat /host) -Dhttp.proxyPort=$(cat /port)
 
+# Copy source code here to take advantage of Docker caching.
 COPY ./src /src
-RUN ./gradlew -Dhttp.proxyHost=192.168.1.1 -Dhttp.proxyPort=3128 build
+RUN ./gradlew -Dhttp.proxyHost=$(cat /host) -Dhttp.proxyPort=$(cat /port) build
