Add proxy_pass to transaction server

--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -4,7 +4,9 @@ events {
     use epoll;
     multi_accept on;
 }
+
 http {
+
     server {
 
         listen 80;
@@ -12,9 +14,19 @@ http {
         access_log off;
         client_body_timeout 10;
 
-
         location / {
             root /usr/share/nginx/html;
         }
+        location /dashboard {
+            root /usr/share/nginx/html;
+        }
+        location /api {
+            proxy_pass http://transaction-server:4000;
+        }
+        location /404 {
+            root /usr/share/nginx/html;
+        }
     }
+
 }
+
