--- a/logging-server/Dockerfile
+++ b/logging-server/Dockerfile
@@ -5,7 +5,7 @@ ENV http_proxy=$HTTP_PROXY
 ENV https_proxy=$HTTPS_PROXY
 RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
 RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install --upgrade pip 
-RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install pika==1.0.0b2
+RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install pika
 RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install psycopg2
 
 
