Setup api calls

--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -12,9 +12,20 @@ http {
         access_log off;
         client_body_timeout 10;
 
+        root /usr/share/nginx/html;
 
         location / {
-            root /usr/share/nginx/html;
+            index login.html;
         }
+        location /dashboard/ {
+            index dashboard.html;
+        }
+        location /css/ {
+        }
+        location /js/ {
+        }
+        location /vendor/ {
+        }
+
     }
 }
