--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,17 +22,17 @@ services:
             - ADMINER_USERNAME=${DB_USER}
             - ADMINER_PASSWORD=${DB_PASS}
             - ADMINER_AUTOLOGIN=1
-    quote-cache:
-        build: quote-cache
-        restart: always
-        ports:
-            - 4444:4444
-            - 6000:6000
+    # quote-cache:
+    #     build: quote-cache
+    #     restart: always
+    #     ports:
+    #         - 4444:4444
+    #         - 6000:6000
     transaction-server:
         build: transaction-server
         depends_on:
             - postgres
-            - quote-cache
+            # - quote-cache
         restart: unless-stopped
         ports:
             - ${TRANSACTION_PORT}:5000
@@ -50,10 +50,12 @@ services:
         stdin_open: true
         tty: true
     webserver:
-        image: nginx:1.14
+        image: nginx:1.14.2
         restart: on-failure
         ports:
             - ${WEB_SERVER_PORT}:80
         volumes:
             - ./webserver/nginx.conf:/etc/nginx/nginx.conf:ro
             - ./webserver/html:/usr/share/nginx/html:ro
+        stdin_open: true
+        tty: true
