--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -5,6 +5,10 @@ events {
     multi_accept on;
 }
 http {
+    include /etc/nginx/mime.types;
+    upstream api {
+        server transaction-server:5000;
+    }
     server {
 
         listen 80;
@@ -17,14 +21,31 @@ http {
         location / {
             index login.html;
         }
-        location /dashboard/ {
+        location /dashboard {
             index dashboard.html;
         }
-        location /css/ {
+        # location ~ \.css {
+        #     add_header  Content-Type    text/css;
+        # }
+        # location ~ \.js {
+        #     add_header  Content-Type    application/x-javascript;
+        # }
+        location ~* \.(css)$ {
+            add_header  Content-Type    text/css;
         }
         location /js/ {
+            types { } default_type "application/x-javascript";
         }
         location /vendor/ {
+        }
+        location /api {
+            rewrite ^/(.*) /$1 break;
+            proxy_pass http://api;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_redirect     off;
         }
 
     }
