--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,31 @@ services:
             - POSTGRES_PASSWORD=${DB_PASS}
         volumes:
             - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    adminer:
+        image: michalhosna/adminer:4.7.0
+        depends_on:
+            - postgres
+        restart: on-failure
+        ports:
+            - ${ADMINER_PORT}:8080
+        environment:
+            - ADMINER_DRIVER=pgsql
+            - ADMINER_DB=postgres
+            - ADMINER_SERVER=postgres
+            - ADMINER_USERNAME=${DB_USER}
+            - ADMINER_PASSWORD=${DB_PASS}
+            - ADMINER_AUTOLOGIN=1
+    # quote-cache:
+    #     build: quote-cache
+    #     restart: always
+    #     ports:
+    #         - 4444:4444
+    #         - 6000:6000
     transaction-server:
         build: transaction-server
         depends_on:
             - postgres
+            # - quote-cache
         restart: unless-stopped
         ports:
             - ${TRANSACTION_PORT}:5000
@@ -26,5 +47,15 @@ services:
             - transaction-server
         volumes:
             - ./workloads:/workloads:ro
+        stdin_open: true
+        tty: true
+    webserver:
+        image: nginx:1.14.2
+        restart: on-failure
+        ports:
+            - ${WEB_SERVER_PORT}:80
+        volumes:
+            - ./webserver/nginx.conf:/etc/nginx/nginx.conf:ro
+            - ./webserver/html:/usr/share/nginx/html:ro
         stdin_open: true
         tty: true
