--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -9,6 +9,7 @@ http {
     upstream api {
         server transaction-server:5000;
     }
+
     server {
 
         listen 80;
@@ -39,6 +40,15 @@ http {
         location /vendor/ {
         }
         location /api {
+            rewrite ^/(.*) /$1 break;
+            proxy_pass http://api;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_redirect     off;
+        }
+        location /status {
             rewrite ^/(.*) /$1 break;
             proxy_pass http://api;
             proxy_set_header Host $host;
