Dev/kyle.thorpe/logging db (#2) Create logging-server microservice
* Create init.sql

* Create Dockerfile

* Add logging-db

* Add RABBIT_MQ credentials

* Add rabbitmq and logging-server

* Change data types of timestamp and transaction_num

* Create Dockerfile

* Create server.py

* Remove link

* Create database.ini

* Change server.py to consumer.py, add pika version and psycopg2

* Create consumer.py

* Delete server.py

* Create config.py

* Create logging_DB.py

* Change timeof to timestamp

* Move xml_writer to logging-server

* Add pika

* Convert xml_writer calls to publisher calls

* Delete config.py

* Change timestamp to BIGINT

* Add rabbitmq dependson

* Fix psycopg2 error

* Create publisher.py

* Update consumer.py

* Add adminer for logging db

* Change TIMESTAMP to BIGINT and remove PRIMARY KEY

* Remove Pika version

* Refactor consumer to be much more simple

* Fix numerous issues

* Remove Pika version

* Refactor publisher to be more simple

* Make publish_message async

* Add filename field

* Add dumplog handling

* Swap regex checking of commands to be more efficient

* Fix dumplog and display_summary parameters

* Add special case handling for DUMPLOG with no username

* Swap to logger usage, and silence extra pika messages

* Change print statements to logger calls

* Add /out volume for logging-server

* Add filename field for dumplog message publishing

* Add username to ADD command

* Update Pika version

* Remove last line stripping

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,48 @@ services:
             - POSTGRES_PASSWORD=${DB_PASS}
         volumes:
             - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    rabbitmq:
+        image: rabbitmq:3-management
+        hostname: "rabbitmq"
+        restart: on-failure
+        ports: 
+            - 5672:5672
+            - 15672:15672
+        environment: 
+            - RABBITMQ_DEFAULT_USER=${RABBIT_MQ_USER}
+            - RABBITMQ_DEFAULT_PASS=${RABBIT_MQ_PASS}
+    logging-db:
+        build: logging-db
+        restart: on-failure
+        environment:
+            - POSTGRES_USER=${DB_USER}
+            - POSTGRES_PASSWORD=${DB_PASS}
+        depends_on:
+            - rabbitmq
+        volumes:
+            - ./logging-db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    logging-server:
+        build: logging-server
+        restart: on-failure
+        depends_on:
+            - logging-db
+            - rabbitmq
+        volumes:
+            - ./logging-server/out:/out:rw
+    adminer-logging:
+        image: michalhosna/adminer:4.7.0
+        depends_on:
+            - logging-db
+        restart: on-failure
+        ports:
+            - 90:8080
+        environment:
+            - ADMINER_DRIVER=pgsql
+            - ADMINER_DB=postgres
+            - ADMINER_SERVER=logging-db
+            - ADMINER_USERNAME=${DB_USER}
+            - ADMINER_PASSWORD=${DB_PASS}
+            - ADMINER_AUTOLOGIN=1
     adminer:
         image: michalhosna/adminer:4.7.0
         depends_on:
@@ -33,6 +75,7 @@ services:
         depends_on:
             - postgres
             - quote-cache
+            - rabbitmq
         restart: unless-stopped
         ports:
             - ${TRANSACTION_PORT}:5000
