--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,12 +64,12 @@ services:
             - ADMINER_USERNAME=${DB_USER}
             - ADMINER_PASSWORD=${DB_PASS}
             - ADMINER_AUTOLOGIN=1
-    # quote-cache:
-    #     build: quote-cache
-    #     restart: always
-    #     ports:
-    #         - 4444:4444
-    #         - 6000:6000
+    quote-cache:
+         build: quote-cache
+         restart: always
+         ports:
+             - 4444:4444
+             - 6000:6000
     transaction-server:
         build: transaction-server
         depends_on:
